# evaluator-cog

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  README.md  evaluator.yaml  pyproject.toml
.github/workflows/: ci.yml  drift-check.yml
docs/: CONFIGURATION.md  PIPELINE.md  PREFECT_AUTOMATION.md
src/common_python_utils/: __init__.py  api.py  logger.py
src/evaluator_cog/: evaluator.py  main.py  models.py  webhook.py
src/evaluator_cog/engine/: api_client.py  deterministic.py  evaluator_config.py  git_history.py  llm.py  routing.py
src/evaluator_cog/flows/: conformance.py  pipeline_eval.py
src/pipeline_evaluator/: evaluator.py  webhook.py
tests/: conftest.py
tests/evaluator_cog/: test_api_client.py  test_conformance.py  test_conformance_helpers.py  test_deterministic.py  test_evaluator.py  test_evaluator_config.py  test_failure_path.py  test_llm.py  test_meta_checks.py  test_output_shape.py  test_pipeline_eval.py  test_priority1_checks.py  test_priority2_checks.py  test_routing.py  test_webhook.py
tests/pipeline_evaluator/: test_evaluator.py  test_webhook.py
