[project]
name = "evaluator-cog"
version = "0.1.0"
description = "Standalone pipeline evaluation flow for the Kaiano ecosystem."
requires-python = ">=3.11"
dependencies = [
    "kaiano",
    "prefect>=3.0,<4.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = true

[tool.uv.sources]
kaiano = { git = "https://github.com/kaianolevine/kaiano-common-utils.git", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline_evaluator"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E","W","F","I","B","C4","UP","ARG","SIM"]
ignore = ["E501","B008","ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["pipeline_evaluator"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 0
show_missing = true